<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialog_add_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_dancer_title_dialog"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/dialog_add_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_add_actor_name_il"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/name_hint_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_add_close_btn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_add_actor_name_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialog_add_color_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/color_hint_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_add_actor_name_il" />

        <RadioGroup
            android:id="@+id/dialog_add_color_rd_gp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_add_color_tv">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/dialog_add_color_1_rd_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue_radio_btn" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/dialog_add_color_2_rd_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_radio_btn" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/dialog_add_color_3_rd_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green_radio_btn" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_add_done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_dialog_btn"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_add_color_rd_gp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>